--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+<p>Get helpon the Ruby On Rails Tutorial at the
+<a href="http://rubytutorial.org/help">Ruby On Rails Help page</a>
+<p>To get help on the sample app see the
+<a href="http://rubytutorial.org/help">Ruby On Rails Tutorial book</a>
+</p>
