--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,14 @@
       <%= link_to "Microblog", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
+	<li>
+          <% if signed_in? %>
+            <%= form_tag user_showresults_path, :method => "get" do%>
+	      <%= submit_tag "Search", :name => nil,  class: "btn btn-mini btn-primary" %>
+	      <%= text_field_tag :search, params[:search], :maxlength => 50, class: "input-large search-query" %>
+            <% end %>
+          <% end %>
+	  </li>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
