--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= gravatar_for user, size: 52 %>
-  <%= link_to user.name, user %>
+  <%= link_to user.name, user %> <br /><span class="timestamp"><%= "@#{user.username}" %></span>
   <% if current_user.admin? and !current_user?(user) %>
     | <%= link_to "delete", user , method: :delete, data: { confirm: "Are you Sure?" } %>
   <% end %>
