--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
   <aside class="span4">
     <section>
       <h1><%= gravatar_for @user %> <%= @user.name %></h1>
+      <%= link_to "@#{@user.username}", @user %>
     </section>
     <section>
       <%= render 'shared/stats' %>
