--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,8 +20,7 @@
   <div class="center hero-unit">
     <h1>Microblog</h1>
     <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application
+      Express Yourself With Mini Blog Entries!
     </h2>
     <%= link_to "Sign Up Now!", signup_path, class: "btn btn-large btn-primary" %>
   </div>
