--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -9,7 +9,7 @@
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
   </span>
   <% if feed_item.in_reply_to %>
-    <%= link_to "reply", '#' %>
+    <%= link_to "reply", mentions_path(:content => "@#{feed_item.user.username}") %>
   <% end %>
   <% if current_user?(feed_item.user) %>
     <%= link_to "delete", feed_item, method: :delete, data: { confirm: "You Sure?" }, title: feed_item.content %>
