--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -9,7 +9,10 @@
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
   </span>
   <% if feed_item.in_reply_to %>
-    <%= link_to "reply", mentions_path(:content => "@#{feed_item.user.username}") %>
+    <!-- <%= link_to "reply", mentions_path(content: "#{feed_item.user.username}") %> -->
+     <%= link_to "reply", '#', :onclick => "document.getElementById('micropost_content').value='@#{feed_item.user.username} ';return false;" %>
+    <!-- <a href="#" onClick="document.getElementById('micropost_content').value=string">reply</a> -->
+
   <% end %>
   <% if current_user?(feed_item.user) %>
     <%= link_to "delete", feed_item, method: :delete, data: { confirm: "You Sure?" }, title: feed_item.content %>
